--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,15 +33,9 @@ jobs:
     - name: Run tests
       run: mvn clean test
 
-    - name: Wait for surefire-reports folder
-      run: |
-        while [ ! -d "target/surefire-reports" ]; do
-          echo "Waiting for surefire-reports folder..."
-          sleep 1
-        done
-
     - name: Export test results
       uses: actions/upload-artifact@v4
+      if: always()
       with:
         name: surefire-reports
         path: /target/surefire-reports/
